[package]
name = "bitmex"
version = "0.1.0"
authors = ["vgatherps <vgatherps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-tungstenite = {git = "https://github.com/vgatherps/async-tungstenite", features = ["tokio-runtime", "tokio-tls"]}
tokio = { version = "*", features = ["full"] }
tokio-tls = "*"
futures = "*"
flate2 = "*"
horrorshow = "0.8.3"
reqwest = { version = "0.10", features = ["json"] }
smallvec = { version = "1.4", features = ["serde"] }
smallstr = { version = "0.2", features = ["serde"] }
