[package]
name = "bitmex"
version = "0.1.0"
authors = ["vgatherps <vgatherps@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[[bin]]
name = "logger"
path = "src/logger.rs"

[[bin]]
name = "reader"
path = "src/reader.rs"

[lib]
name = "arby"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "*"
async-tungstenite = {git = "https://github.com/vgatherps/async-tungstenite", features = ["tokio-runtime", "tokio-tls"]}
tokio = { version = "*", features = ["full", "time"] }
tokio-tls = "*"
futures = "*"
flate2 = "*"
horrorshow = "0.8.3"
reqwest = { version = "0.10", features = ["json"] }
smallvec = { version = "1.4", features = ["serde"] }
smallstr = { version = "0.2", features = ["serde"] }
structopt = "0.3.4"
sha2 = "0.8"
hmac = "0.7"
hex = "0.4"
atomicwrites = "0.2"
chrono = "0.4"
scopeguard = "1"
xorshift = "0.1.3"
bincode = "1.2.1"
lazy_static = "1.4"
dynstack = "0.4"
thiserror = "1"
crossbeam-channel = "0.4"
maplit = "1"
anyhow = "1"
tuple = "0.4.2"
